fixed spelling error

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 										<img src="images/gallery/fulls/CategorieD_1.jpeg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Kaartje 1 Diamand painting</h3>
+										<h3>Kaartje 1 Diamond painting</h3>
 										<p>€2,50</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
@@ -59,7 +59,7 @@
 										<img src="images/gallery/fulls/CategorieD_2.jpeg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Kaartje 2 Diamand painting</h3>
+										<h3>Kaartje 2 Diamond painting</h3>
 										<p>€2,50</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
@@ -72,7 +72,7 @@
 										<img src="images/gallery/fulls/CategorieD_3.jpeg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Kaartje 3 Diamand Painting</h3>
+										<h3>Kaartje 3 Diamond Painting</h3>
 										<p>€2,50</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
@@ -85,7 +85,7 @@
 										<img src="images/gallery/fulls/CategorieD_4.jpeg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Kaartje 4 Diamand Painting</h3>
+										<h3>Kaartje 4 Diamond Painting</h3>
 										<p>€2,50</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
@@ -98,7 +98,7 @@
 										<img src="images/gallery/fulls/CategorieD_5.jpeg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Kaartje 5 Diamand Painting</h3>
+										<h3>Kaartje 5 Diamond Painting</h3>
 										<p>€2,50</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
@@ -111,7 +111,7 @@
 										<img src="images/gallery/fulls/CategorieD_6.jpeg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Kaartje 6 Diamand Painting</h3>
+										<h3>Kaartje 6 Diamond Painting</h3>
 										<p>€2,50</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
@@ -124,7 +124,7 @@
 										<img src="images/gallery/fulls/CategorieD_7.jpeg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Kaartje 7 Diamand Painting</h3>
+										<h3>Kaartje 7 Diamond Painting</h3>
 										<p>€2,50</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
@@ -137,7 +137,7 @@
 										<img src="images/gallery/fulls/CategorieD_8.jpeg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Kaartje 8 Diamand Painting</h3>
+										<h3>Kaartje 8 Diamond Painting</h3>
 										<p>€2,50</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
@@ -150,7 +150,7 @@
 										<img src="images/gallery/fulls/CategorieD_9.jpeg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Kaartje 9 Diamand Painting</h3>
+										<h3>Kaartje 9 Diamond Painting</h3>
 										<p>€2,50</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
@@ -163,7 +163,7 @@
 										<img src="images/gallery/fulls/CategorieD_10.jpeg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Kaartje 10 Diamand painting</h3>
+										<h3>Kaartje 10 Diamond painting</h3>
 										<p>€2,50
 										</p>
 										<ul class="actions fixed">
@@ -177,7 +177,7 @@
 										<img src="images/gallery/fulls/CategorieD_11.jpeg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Kaartje 11 Diamand Painting</h3>
+										<h3>Kaartje 11 Diamond Painting</h3>
 										<p>€2,50</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
@@ -190,7 +190,7 @@
 										<img src="images/gallery/fulls/CategorieD_12.jpeg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Kaartje 12 Diamand Painting</h3>
+										<h3>Kaartje 12 Diamond Painting</h3>
 										<p>€2,50</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
@@ -203,7 +203,7 @@
 										<img src="images/gallery/fulls/CategorieD_13.jpeg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Kaartje 13 Diamand Painting</h3>
+										<h3>Kaartje 13 Diamond Painting</h3>
 										<p>€2,50</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
@@ -216,7 +216,7 @@
 										<img src="images/gallery/fulls/CategorieD_14.jpeg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Kaartje 14 Diamand Painting</h3>
+										<h3>Kaartje 14 Diamond Painting</h3>
 										<p>€2,50</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
@@ -229,7 +229,7 @@
 										<img src="images/gallery/fulls/CategorieD_15.jpeg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Kaartje 15 diamand Painting</h3>
+										<h3>Kaartje 15 diamond Painting</h3>
 										<p>€2,50</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
