--- a/index.html
+++ b/index.html
@@ -319,6 +319,31 @@
 
 					</section>
 
+									<!-- Six -->
+					<section class="wrapper style1 align-center">
+						<div class="inner">
+							<h2>Informatie</h2>
+							<p>Hieronder staat allerlei informatie over bezorging en afhalen en wie ik ben. Heb je nog meer vragen neem dan gerust contact met me op door een berichtje te sturen.</p>
+							<div class="items style1 medium onscroll-fade-in">
+								<section>
+									<span class="icon solid style2 major fas fa-truck"></span>
+									<h3>Bezorging</h3>
+									<p>Stuur gerust een berichtje over de bezorgmogelijkheden. Bezorgen is zeker mogelijk. De bezorgkosten zijn wel voor eigen rekening.</p>
+								</section>
+								<section>
+									<span class="icon solid style2 major fa-user"></span>
+									<h3>Wie ben ik?</h3>
+									<p>Mijn naam is Jara van Tol, 23 jaar en ik woon in Ter Aar bij mijn ouders met mijn hulphond Buddy. Ik ben heel graag creatief bezig en maak veel kaartjes die hier op de website te zien zijn. Uit mijn ervaring weet ik hoe fijn het kan zijn om een kaartje te krijgen van iemand die aan je denkt in een moeilijke periode. Ik hoop iedereen te inspireren om een kaartje te sturen naar iemand die dit goed kan gebruiken.</p>
+								</section>
+								<section>
+									<span class="icon solid style2 major fa-home"></span>
+									<h3>Afhalen</h3>
+									<p>Afhalen is helemaal gratis en dus zeker mogelijk. Stuur gerust een berichtje met je bestelling en dan zorg ik dat het klaarligt voor je. Ook geef ik dan het adres in Ter Aar door.</p>
+								</section>
+							</div>
+						</div>
+					</section>
+
 				<!-- Seven -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
